<resources>
    <string name="app_name">Mijn DW</string>
    <string name="welcomeInfo">Hey collega! Welkom bij de Mijn DW app; een app geschreven vóór en dóór collega\'s die het mogelijk maakt om de diensten uit je DW direct in je agenda te zetten. Handig, toch?</string>
    <string name="usageInfo">Download éérst het tekstbestand dat bij de DW-mail wordt geleverd. Selecteer daarna eventueel opties hier beneden. Laad ten slotte het gedownloade bestand in middels de knop.</string>
    <string name="modifiersText"><![CDATA[Geef extra dienst-symbolen weer in agendapunt-titel. Bijv: !, @, > etc.]]></string>
    <string name="professionText"><![CDATA[Start agendapunt met functietitel. Bijv: Mcn … of HC …]]></string>
    <string name="options">Opties</string>
    <string name="wholeDays">Agendapunten duren hele dagen.</string>
    <string name="noFilesLoaded">Momenteel is geen bestand gekozen!</string>
    <string name="reset">Resetten</string>
    <string name="sharedPrefs">MIJN_DW_ALPHA</string>
    <string name="loadedSuccessDummyText">Week 52 van jaar 9999 geladen!</string>
    <string name="loadedError">Er is een fout opgetreden!\nGeen diensten gevonden.</string>
    <string name="loadTxtFile">Selecteer .txt bestand</string>
    <string name="background_image">Background image</string>
    <string name="lightbulb_icon">Lightbulb icon</string>
    <string name="toevoegen_aan_kalender">Toevoegen aan kalender</string>
    <string name="scroll_naar_beneden_voor_ontwikkelaarsinformatie">Scroll naar beneden voor ontwikkelaarsinformatie..</string>
    <string name="railway_switch_icon">Railway switch icon</string>
    <string name="app_icoon">App icoon</string>
    <string name="mijn_dw">Mijn DW</string>
    <string name="versie">Versie </string>
    <string name="over_deze_app">Over deze app</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="copyright">Copyright</string>
    <string name="email_ontwikkelaar">Email ontwikkelaar</string>
    <string name="privacyverklaring">Privacyverklaring</string>
    <string name="informatie_voor_ontwikkelaars">Informatie voor ontwikkelaars</string>
    <string name="divider_in_the_shape">Divider in the shape of a piece of railway</string>
    <string name="privacy_notice_text">Deze app gebruikt de volgende gegevens voor de verwerking van jouw DW: voorletter, achternaam, personeelsnummer en alle overige dienstgegevens waaronder dienstnummer, standplaats en begin- en eindtijden. De verwerking van deze gegevens gebeurt lokaal (offline) op jouw apparaat. Dit houdt dus in dat jouw gegevens niet door de app worden verzonden. Voor de volledige privacyverklaring (in het Engels), zie de button hier beneden.</string>
    <string name="not_affiliatied_text">Deze app \'Mijn DW\' is op geen enkele manier gelieerd aan of verwant met zowel de \'Nederlandse Spoorwegen N.V.\' als \'ProRail B.V.\'</string>
    <string name="update_available">Er is een update beschikbaar voor Mijn DW! Klik op deze melding om de update te downloaden.</string>
    <string name="close">Close</string>
    <string name="rustdagen_k_opslaan_in_agenda">Rustdagen opslaan in agenda.</string>
    <string name="alleen_vta_componenten_weergeven">Alleen VTA-componenten weergeven.\nBijv. Verlof, CF-dag etc.</string>
    <string name="nieuw_rustdagen">Nieuw! Je kunt nu óók rustdagen en/of VTA-componenten (VL, CF etc.) toevoegen.</string>
    <string name="warning_symbol">Warning symbol</string>
    <string name="bericht_van_de_ontwikkelaar_n_nblablablablabla_blablablablablablablablablabla_blablablablabla_blablablablablablablablablabla">Bericht van de ontwikkelaar:\n\nBLABLABLABLABLA BLABLABLABLABLABLABLABLABLABLA BLABLABLABLABLA BLABLABLABLABLABLABLABLABLABLA</string>
    <string name="agendapunten_duren_hele_dagen">Agendapunten duren hele dagen</string>
    <string name="dienstnummers_om_te_negeren">Dienstnummers om te negeren</string>
    <string name="deze_dienstnummers_worden">Deze dienstnummers worden niet verwerkt door de app en zullen daarom ook niet toegevoegd worden aan de kalender. Dit is met name handig voor collega\'s met nevenfuncties. Splits meerdere diensten met een komma. Bijv: \'TWO,5015,WA\' etc.</string>
    <string name="dienstnummers">Dienstnummers</string>
    <string name="agendapunten_hebben_een_prefix">Agendapunten hebben een prefix</string>
    <string name="de_titels_van_de_agendapunten">De titels van de agendapunten zullen starten met deze zogenaamde prefix plus een spatie. Bijvoorbeeld: \'Treindienst\' HC Asd 123.</string>
    <string name="prefix">Prefix</string>
    <string name="vervangende_titels">Vervangende titels</string>
    <string name="replacement_text">De app ondersteunt de mogelijkheid om bepaalde dienstnummers een andere titel te geven in de agenda. Gebruik: \'5015;Kantoordienst,1001;Instructie geven\'. Dit voorbeeld maakt het dat diensten met nummer 5015 de titel \'Kantoordienst\' krijgen, dienstnummer 1001 wordt \'Instructie geven\' etc.</string>
    <string name="vervangingstekst">Vervangingstekst</string>
    <string name="nieuwe_methode">Nieuwe methode</string>
    <string name="agendalink">Agendalink</string>
    <string name="newflowtext">Selecteer in het onderstaande menu de gewenste instellingen. Deze app functioneert middels de agendalink die te verkrijgen is vanuit wissel. Deze is te vinden op de pagina van de donderdagseweek -> Symbool rechts bovenin -> Volgende -> Andere app. Plak deze link in het venster dat geopend wordt met de knop onderaan deze pagina.</string>
    <string name="agendalink_invoeren">Agendalink invoeren</string>
    <string name="geen_agendalink">Er is geen agendalink ingevoerd.</string>
    <string name="wat_is_nieuw">Wat is nieuw?</string>
    <string name="news_text">Nieuw! Door de landelijke overgang naar Shift werkt de oude methode niet langer. Deze is daarom verwijderd uit de app.</string>
</resources>