<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/bgImageCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="-40dp"
        android:src="@drawable/ic_baseline_calendar_bg_150"
        app:layout_constraintEnd_toEndOf="@+id/mainView"
        app:layout_constraintTop_toTopOf="@+id/mainView"
        android:alpha="50"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/bgImageTrainICM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="-40dp"
        android:src="@drawable/train_icm"
        app:layout_constraintStart_toStartOf="@+id/mainView"
        app:layout_constraintTop_toTopOf="@+id/mainView"
        android:alpha="50"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/bgImageTrainVIRM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="-90dp"
        android:alpha="50"
        android:src="@drawable/train_virm"
        app:layout_constraintStart_toStartOf="@+id/mainView"
        app:layout_constraintTop_toBottomOf="@+id/bgImageTrainICM"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/bgImageTrainLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="-135dp"
        android:scaleX="-1"
        android:alpha="50"
        android:src="@drawable/train_loc"
        app:layout_constraintEnd_toEndOf="@+id/mainView"
        app:layout_constraintBottom_toTopOf="@id/bgImageTrainVelaro"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/bgImageTrainVelaro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="-60dp"
        android:scaleX="-1"
        android:alpha="50"
        android:src="@drawable/train_velaro"
        app:layout_constraintEnd_toEndOf="@+id/mainView"
        app:layout_constraintBottom_toBottomOf="@id/mainView"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/bgImageClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-50dp"
        android:layout_marginBottom="70dp"
        android:alpha="50"
        android:scaleX="-1"
        android:src="@drawable/ic_outline_access_time_180"
        app:layout_constraintBottom_toBottomOf="@id/mainView"
        app:layout_constraintStart_toStartOf="@+id/mainView"
        android:contentDescription="@string/background_image" />


    <ScrollView
        tools:context=".MainActivity"
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu"
                app:title="Mijn DW"
                app:titleTextColor="?attr/colorOnSecondaryContainer"
                app:titleTextAppearance="@style/TextAppearance.Material3.DisplayLarge"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/infoCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="#FF000000"
                android:layout_marginHorizontal="30dp"
                app:cardBackgroundColor="?attr/colorSecondaryContainer"
                app:cardElevation="3dp"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_lightbulb_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/lightbulb_icon" />

                    <TextView
                        android:text="@string/welcomeInfo"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_margin="10dp"
                        android:paddingEnd="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/usageCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="#FF000000"
                android:layout_marginHorizontal="30dp"
                app:cardBackgroundColor="?attr/colorSecondaryContainer"
                app:cardElevation="3dp"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_lightbulb_24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/lightbulb_icon" />

                    <TextView
                        android:text="@string/usageInfo"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_margin="10dp"
                        android:paddingEnd="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/settingsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="#FF000000"
                android:layout_marginHorizontal="30dp"
                app:cardBackgroundColor="?attr/colorSurfaceContainerHigh"
                app:cardElevation="3dp"
                app:cardCornerRadius="15dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/options"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                        android:layout_marginBottom="20dp" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/professionCheckBox"
                        android:checked="true"
                        android:text="@string/professionText"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/modifiersCheckBox"
                        android:checked="true"
                        android:text="@string/modifiersText"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/wholeDayCheckBox"
                        android:text="@string/wholeDays"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/loadedNone"
                android:drawablePadding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/noFilesLoaded"
                android:textColor="?attr/colorOnSurface"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:drawableTint="?attr/colorOnSurface"
                android:drawableLeft="@drawable/ic_baseline_error_20"
                tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />

            <TextView
                android:visibility="gone"
                android:id="@+id/loadedSuccessfully"
                android:drawablePadding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/loadedSuccessDummyText"
                android:textColor="?attr/colorSuccess"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:drawableLeft="@drawable/ic_baseline_check_circle_20"
                tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml"
                android:drawableTint="?attr/colorSuccess" />

            <TextView
                android:visibility="gone"
                android:id="@+id/loadedError"
                android:drawablePadding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/loadedError"
                android:textColor="?attr/colorError"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:drawableLeft="@drawable/ic_baseline_error_20"
                android:drawableTint="?attr/colorError"
                tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoadFile"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_baseline_upload_file_24"
                android:textColor="?attr/colorPrimaryContainer"
                android:drawableTint="?attr/colorPrimaryContainer"
                android:text="@string/loadTxtFile"
                tools:ignore="RtlHardcoded" />

            <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:backgroundTint="?attr/colorAccent"
                android:drawableLeft="@drawable/ic_baseline_restart_alt_24"
                android:drawableTint="?attr/colorPrimaryContainer"
                android:text="@string/reset"
                tools:ignore="RtlHardcoded" />

            <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:id="@+id/btnConvertFile"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:backgroundTint="?attr/colorTertiaryContainer"
                android:drawableLeft="@drawable/ic_baseline_calendar_month_24"
                android:drawableTint="?attr/colorOnTertiaryContainer"
                android:textColor="?attr/colorOnTertiaryContainer"
                android:layout_marginTop="10dp"
                android:text="@string/toevoegen_aan_kalender"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/devHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/scroll_naar_beneden_voor_ontwikkelaarsinformatie"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                app:drawableLeftCompat="@drawable/ic_baseline_keyboard_double_arrow_down_24"
                app:drawableTint="?attr/colorOnPrimaryContainer" />

            <EditText
                android:id="@+id/dwContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:layout_marginTop="200dp"
                android:background="#22000000"
                android:enabled="false"
                android:visibility="gone"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,TextFields" />

            <EditText
                android:id="@+id/icsContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:layout_marginTop="20dp"
                android:background="#22000000"
                android:enabled="false"
                android:visibility="gone"
                android:layout_marginBottom="20dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,TextFields" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>