<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_30"
        app:title="Instellingen"
        app:titleTextAppearance="@style/TextAppearance.Material3.DisplaySmall"
        app:titleTextColor="?attr/colorOnSecondaryContainer" />

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:screenReaderFocusable="true"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/settingsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardCornerRadius="30dp"
                app:cardElevation="1dp"
                app:contentPaddingTop="10dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/wholeDaysCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:checked="false"
                        android:paddingHorizontal="10dp"
                        android:text="@string/agendapunten_duren_hele_dagen"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textColor="?attr/colorOnSecondaryContainer"
                         />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="20dp"
                        app:dividerColor="?attr/colorSecondary" />

                    <LinearLayout
                        android:id="@+id/settingsSecondOption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/settingsSecondTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/dienstnummers_om_te_negeren"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:textColor="?attr/colorOnSecondaryContainer"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/settingsSecondText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/deze_dienstnummers_worden"
                            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                            android:textColor="?attr/colorOnSurface"
                            tools:ignore="RtlSymmetry" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:hint="@string/dienstnummers">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/ignoreEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        app:dividerColor="?attr/colorSecondary" />

                    <LinearLayout
                        android:id="@+id/settingsThirdOption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/settingsThirdTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/agendapunten_hebben_een_prefix"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:textColor="?attr/colorOnSecondaryContainer"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/settingsThirdText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/de_titels_van_de_agendapunten"
                            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                            android:textColor="?attr/colorOnSurface"
                            tools:ignore="RtlSymmetry" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:hint="@string/prefix">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/prefixEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        app:dividerColor="?attr/colorSecondary" />

                    <LinearLayout
                        android:id="@+id/settingsFourthOption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/settingsFourthTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/vervangende_titels"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:textColor="?attr/colorOnSecondaryContainer"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/settingsFourthText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/replacement_text"
                            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                            android:textColor="?attr/colorOnSurface"
                            tools:ignore="RtlSymmetry" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:hint="@string/vervangingstekst">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/replacementEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:imeOptions="actionDone" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>